--- a/Fake news predictor.ipynb
+++ b/Fake news predictor.ipynb
@@ -29,11 +29,13 @@
     "import numpy as np\n",
     "import seaborn as sb\n",
     "import re\n",
+    "import torch\n",
     "from tqdm import tqdm\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
     "from collections import Counter\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "from transformers import RobertTokenizer, RobertaForSequenceClassification"
    ]
   },
   {
@@ -1417,10 +1419,10 @@
     "num_batches = (len(clean_data) // batch_size) + 1 \n",
     "\n",
     "def clean_text(text):\n",
-    "    text = text.lower()  # Convert to lowercase\n",
-    "    text = re.sub(r'<.*?>', '', text)  # Remove HTML tags\n",
-    "    text = re.sub(r'[^\\w\\s]', '', text)  # Remove punctuation\n",
-    "    text = ' '.join([word for word in word_tokenize(text) if word not in stopwords.words('english')])  # Remove stopwords\n",
+    "    text = text.lower() \n",
+    "    text = re.sub(r'<.*?>', '', text) \n",
+    "    text = re.sub(r'[^\\w\\s]', '', text) \n",
+    "    text = ' '.join([word for word in word_tokenize(text) if word not in stopwords.words('english')]) \n",
     "    return text\n",
     "\n",
     "def process_batch(batch):\n",
@@ -1573,14 +1575,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_news = cleaned_data[cleaned_data['label'] == 1]\n",
+    "fake_news = cleaned_data[cleaned_data['label'] == 0]\n",
+    "\n",
+    "all_true_words = []\n",
+    "true_news['text'].apply(lambda x: all_true_words.extend(word_tokenize(x)))\n",
+    "\n",
+    "all_fake_words = []\n",
+    "fake_news['text'].apply(lambda x: all_fake_words.extend(word_tokenize(x)))\n",
+    "\n",
+    "# countes the frequency of all words in the list\n",
+    "true_word_freq = Counter(all_true_words)\n",
+    "common_true_words = true_word_freq.most_common(10)  \n",
+    "\n",
+    "fake_word_freq = Counter(all_fake_words)\n",
+    "common_fake_words = fake_word_freq.most_common(10)  # Get the top 10 words\n",
+    "\n",
+    "# zip unpacks common_true_words into word and counts\n",
+    "true_words, true_counts = zip(*common_true_words)\n",
+    "true_plot_data = pd.DataFrame({\n",
+    "    'Word': true_words,\n",
+    "    'Frequency': true_counts\n",
+    "})\n",
+    "\n",
+    "fake_words, fake_counts = zip(*common_fake_words)\n",
+    "fake_plot_data = pd.DataFrame({\n",
+    "    'Word': fake_words,\n",
+    "    'Frequency': fake_counts\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\q1\\AppData\\Local\\Temp\\ipykernel_19688\\928288881.py:29: FutureWarning: \n",
+      "C:\\Users\\q1\\AppData\\Local\\Temp\\ipykernel_19688\\1178692994.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1596,12 +1634,28 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "plt.figure(figsize=(12, 6))\n",
+    "sb.barplot(x='Word', y='Frequency', data=true_plot_data, palette='viridis')\n",
+    "plt.xlabel('Words')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Top 10 Most Frequent Words in True News')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\q1\\AppData\\Local\\Temp\\ipykernel_19688\\928288881.py:37: FutureWarning: \n",
+      "C:\\Users\\q1\\AppData\\Local\\Temp\\ipykernel_19688\\3568529205.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1620,40 +1674,6 @@
     }
    ],
    "source": [
-    "true_news = cleaned_data[cleaned_data['label'] == 1]\n",
-    "fake_news = cleaned_data[cleaned_data['label'] == 0]\n",
-    "\n",
-    "all_true_words = []\n",
-    "true_news['text'].apply(lambda x: all_true_words.extend(word_tokenize(x)))\n",
-    "\n",
-    "all_fake_words = []\n",
-    "fake_news['text'].apply(lambda x: all_fake_words.extend(word_tokenize(x)))\n",
-    "\n",
-    "true_word_freq = Counter(all_true_words)\n",
-    "common_true_words = true_word_freq.most_common(10)  # Get the top 10 words\n",
-    "\n",
-    "fake_word_freq = Counter(all_fake_words)\n",
-    "common_fake_words = fake_word_freq.most_common(10)  # Get the top 10 words\n",
-    "\n",
-    "true_words, true_counts = zip(*common_true_words)\n",
-    "true_plot_data = pd.DataFrame({\n",
-    "    'Word': true_words,\n",
-    "    'Frequency': true_counts\n",
-    "})\n",
-    "\n",
-    "fake_words, fake_counts = zip(*common_fake_words)\n",
-    "fake_plot_data = pd.DataFrame({\n",
-    "    'Word': fake_words,\n",
-    "    'Frequency': fake_counts\n",
-    "})\n",
-    "\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "sb.barplot(x='Word', y='Frequency', data=true_plot_data, palette='viridis')\n",
-    "plt.xlabel('Words')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Top 10 Most Frequent Words in True News')\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.show()\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "sb.barplot(x='Word', y='Frequency', data=fake_plot_data, palette='viridis')\n",
@@ -1673,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2031,10 +2051,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_train=train_data['label']\n",
+    "x_train=train_data.drop(columns=['label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7016</th>\n",
+       "      <td>Gorbachev, last Soviet leader, wants Trump-Put...</td>\n",
+       "      <td>moscow reuters mikhail gorbachev last soviet l...</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>October 12, 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5230</th>\n",
+       "      <td>U.S. senators urge NHTSA to accelerate Takata ...</td>\n",
+       "      <td>detroitwashington reuters us senators edward m...</td>\n",
+       "      <td>politicsNews</td>\n",
+       "      <td>February 24, 2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40148</th>\n",
+       "      <td>81-Year-Old Cuban Run Over By Racist A$$hole</td>\n",
+       "      <td>florida continues lead nation head shaking ins...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>April 15, 2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24349</th>\n",
+       "      <td>YIKES! HILLARY GOES OFF THE RAILS…Pulls A Howa...</td>\n",
+       "      <td></td>\n",
+       "      <td>politics</td>\n",
+       "      <td>Nov 7, 2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42308</th>\n",
+       "      <td>Even Trey Gowdy Thinks Trump’s Wiretap Conspi...</td>\n",
+       "      <td>donald trump playing dangerous game falsely ac...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>March 6, 2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   title  \\\n",
+       "7016   Gorbachev, last Soviet leader, wants Trump-Put...   \n",
+       "5230   U.S. senators urge NHTSA to accelerate Takata ...   \n",
+       "40148       81-Year-Old Cuban Run Over By Racist A$$hole   \n",
+       "24349  YIKES! HILLARY GOES OFF THE RAILS…Pulls A Howa...   \n",
+       "42308   Even Trey Gowdy Thinks Trump’s Wiretap Conspi...   \n",
+       "\n",
+       "                                                    text       subject  \\\n",
+       "7016   moscow reuters mikhail gorbachev last soviet l...     worldnews   \n",
+       "5230   detroitwashington reuters us senators edward m...  politicsNews   \n",
+       "40148  florida continues lead nation head shaking ins...          News   \n",
+       "24349                                                         politics   \n",
+       "42308  donald trump playing dangerous game falsely ac...          News   \n",
+       "\n",
+       "                     date  \n",
+       "7016    October 12, 2017   \n",
+       "5230   February 24, 2016   \n",
+       "40148      April 15, 2016  \n",
+       "24349         Nov 7, 2016  \n",
+       "42308       March 6, 2017  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7016     1\n",
+       "5230     1\n",
+       "40148    0\n",
+       "24349    0\n",
+       "42308    0\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test=test_data['label']\n",
+    "x_test=test_data.drop(columns=['label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17941</th>\n",
+       "      <td>LOL! CNN Tells Viewers “IT’S ILLEGAL” To Read ...</td>\n",
+       "      <td>wow cnn host chris cuomo tells viewers illegal...</td>\n",
+       "      <td>left-news</td>\n",
+       "      <td>Oct 16, 2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39658</th>\n",
+       "      <td>Director Rob Reiner: ‘Moron’ Trump Is Last Ga...</td>\n",
+       "      <td>racists confederate flag worshipers may celebr...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>November 15, 2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36428</th>\n",
+       "      <td>White House Staffer On Kushner FBI Investigat...</td>\n",
+       "      <td>jared kushner one trump senior advisers soninl...</td>\n",
+       "      <td>News</td>\n",
+       "      <td>May 26, 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21823</th>\n",
+       "      <td>Serbia PM says must leave the past behind afte...</td>\n",
+       "      <td>oslo reuters exbosnian serb general rakto mlad...</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>November 22, 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7572</th>\n",
+       "      <td>Syrians vote in Kurdish-led regions of north</td>\n",
+       "      <td>qamishli syria reuters syrians voted friday el...</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>September 22, 2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   title  \\\n",
+       "17941  LOL! CNN Tells Viewers “IT’S ILLEGAL” To Read ...   \n",
+       "39658   Director Rob Reiner: ‘Moron’ Trump Is Last Ga...   \n",
+       "36428   White House Staffer On Kushner FBI Investigat...   \n",
+       "21823  Serbia PM says must leave the past behind afte...   \n",
+       "7572        Syrians vote in Kurdish-led regions of north   \n",
+       "\n",
+       "                                                    text    subject  \\\n",
+       "17941  wow cnn host chris cuomo tells viewers illegal...  left-news   \n",
+       "39658  racists confederate flag worshipers may celebr...       News   \n",
+       "36428  jared kushner one trump senior advisers soninl...       News   \n",
+       "21823  oslo reuters exbosnian serb general rakto mlad...  worldnews   \n",
+       "7572   qamishli syria reuters syrians voted friday el...  worldnews   \n",
+       "\n",
+       "                      date  \n",
+       "17941         Oct 16, 2016  \n",
+       "39658    November 15, 2016  \n",
+       "36428         May 26, 2017  \n",
+       "21823   November 22, 2017   \n",
+       "7572   September 22, 2017   "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17941    0\n",
+       "39658    0\n",
+       "36428    0\n",
+       "21823    1\n",
+       "7572     1\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.head()"
+   ]
   },
   {
    "cell_type": "code",
